# banking-data-handler

./: .flake8  .gitignore  README.md
banking-data-handler/: .gitignore  README.md  pyproject.toml
banking-data-handler/src/: decorators.py  external_api.py  generators.py  masks.py  pandas_library.py  processing.py  regular_expressions.py  widget.py
banking-data-handler/test_results/: test_results_external_api.html  test_results_masks.html  test_results_pandas_library.html  test_results_utils.html  test_results_widget.html
banking-data-handler/tests/: conftest.py  test_masks.py  test_pandas_library.py  test_processing.py  test_widget.py
src/: counting_categories.py  external_api.py  generators.py  main.py  utils.py
test_results/: test_results_counting_categories.html  test_results_decorators.html  test_results_external_api.html  test_results_generators.html  test_results_main.html  test_results_masks.html  test_results_processing.html  test_results_regular_expressions.html
tests/: test_counting_categories.py  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_regular_expressions.py  test_utils.py
